--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,6 @@ task fatJar(type: Jar) {
 }
 
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.3.1'
+wrapper {
+    gradleVersion = '5.4.1'
 }
